# PX4-Autopilot

boards/nxp/fmurt1062-v1/nuttx-config/nsh/: defconfig
boards/nxp/teensy41-v1/: default.px4board  firmware.prototype
boards/nxp/teensy41-v1/nuttx-config/: Kconfig
boards/nxp/teensy41-v1/nuttx-config/include/: board.h
boards/nxp/teensy41-v1/nuttx-config/nsh/: defconfig
boards/nxp/teensy41-v1/src/: CMakeLists.txt  adc.c  autoleds.c  board_config.h  encoder.c  ethernet.c  flexcan.c  flexpwm.c  gpio.c  i2c.c  i2c.cpp  imxrt_appinit.c  imxrt_boot.c  imxrt_bringup.c  imxrt_flexspi_nor_flash.c  imxrt_flexspi_nor_flash.h  init.c  led.c  sdhc.c  spi.c  spi.cpp  timer_config.cpp  userleds.c
